--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
     <link rel="stylesheet" href="css/bootstrap.css" type="text.css">
     <link rel="stylesheet" href="css/styles.css">
-    
+
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/script.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
