--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <title>Dice</title>
 </head>
 <body>
-    
+ 
+    <main>
+
+        <div class="container">
+            <div class="jumbotron">
+                <h1></h1>
+            </div>
+        </div>
+
+    </main>
+
 </body>
 </html>
