form to add names of players inserted

--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
     <main>
 
         <div class="container">
+
             <div class="jumbotron">
                 <h1></h1>
+            </div>
+
+            <div class="well" id="register">
+
+                <form id="names">
+                    <input type="text" id="firstPlayer" class="form-control" placeholder="Player one name">
+                    <input type="text" id="secondPlayer" class="form-control" placeholder="player two name"> 
+                </form>
+
             </div>
         </div>
 
