a form submit button put to place.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
                 <form id="names">
                     <input type="text" id="firstPlayer" class="form-control" placeholder="Player one name">
-                    <input type="text" id="secondPlayer" class="form-control" placeholder="player two name"> 
+                    <input type="text" id="secondPlayer" class="form-control" placeholder="player two name">
+                    
+                    <button type="submit" class="btn btn-primary">Start Game</button>
                 </form>
 
             </div>
