Player one pael made and button put

--- a/index.html
+++ b/index.html
@@ -33,7 +33,23 @@
                 </form>
 
             </div>
+
+            <div class="start">
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div class="panel panel-default">
+                            <h2 id="player-one">Player one: <span id="play1"></span> </h2>
+                            <p>Total score: <span id="total1"></span> </p>
+                            <button id="roller-one" class="btn btn-default" type="button">Roll</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
+
 
     </main>
 
