game play section put in place

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                     </div>
 
                 </div>
+
+                <div id="result">
+
+                    <div class="well">
+                        <h3>Game play</h3>
+                        <p>score: <span id="shown-score"></span></p>
+                    </div>
+
+                </div>
+                
             </div>
 
         </div>
