--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <div class="panel panel-default">
                             <h2 id="player-one">Player one: <span id="play1"></span> </h2>
                             <p>Total score: <span id="total1"></span> </p>
+                            <p>Dice score: <span id="rolldice"></span> </p>
                             <button id="roller-one" class="btn btn-default" type="button">Roll</button>
                             <button type="button" class="btn btn-primary" id="hold-one">Hold</button>
                         </div>
@@ -50,6 +51,7 @@
                         <div class="panel panel-primary">
                             <h2 id="player-two">Player Two: <span id="play2"></span> </h2>
                             <p>Total score: <span id="total2"></span> </p>
+                            <p>Dice score: <span id="rolldice2"></span> </p>
                             <button type="button" class="btn btn-primary" id="roller-two">Roll</button>
                             <button type="button" class="btn tn-default" id="hold-two">Hold</button>
                         </div>
@@ -65,7 +67,7 @@
                     </div>
 
                 </div>
-                
+
             </div>
 
         </div>
