--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="css/bootstrap.css" type="text.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
 
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/script.js"></script>
@@ -41,7 +41,7 @@
                         <div class="panel panel-default">
                             <h2 id="player-one">Player one: <span id="play1"></span> </h2>
                             <p>Total score: <span id="total1"></span> </p>
-                            <p>Dice score: <span id="rolldice"></span> </p>
+                            <p>Dice score: <span id="rollDice"></span> </p>
                             <button id="roller-one" class="btn btn-default" type="button">Roll</button>
                             <button type="button" class="btn btn-primary" id="hold-one">Hold</button>
                         </div>
@@ -51,7 +51,7 @@
                         <div class="panel panel-primary">
                             <h2 id="player-two">Player Two: <span id="play2"></span> </h2>
                             <p>Total score: <span id="total2"></span> </p>
-                            <p>Dice score: <span id="rolldice2"></span> </p>
+                            <p>Dice score: <span id="rollDice2"></span> </p>
                             <button type="button" class="btn btn-primary" id="roller-two">Roll</button>
                             <button type="button" class="btn tn-default" id="hold-two">Hold</button>
                         </div>
