--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="row">
 
                     <div class="col-md-6">
-                        <div class="panel panel-default">
+                        <div class="panel panel-default" id="p1">
                             <h2 id="player-one">Player one: <span id="play1"></span> </h2>
                             <p>Total score: <span id="total1"></span> </p>
                             <p>Dice score: <span id="rollDice"></span> </p>
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div class="panel panel-primary">
+                        <div class="panel panel-primary" id="p2">
                             <h2 id="player-two">Player Two: <span id="play2"></span> </h2>
                             <p>Total score: <span id="total2"></span> </p>
                             <p>Dice score: <span id="rollDice2"></span> </p>
