disabling the classes function added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="text" id="firstPlayer" class="form-control" placeholder="Player one name">
                     <input type="text" id="secondPlayer" class="form-control" placeholder="player two name">
                     
-                    <button type="submit" class="btn btn-primary">Start Game</button>
+                    <button type="submit" id="sub" class="btn btn-primary">Start Game</button>
                 </form>
 
             </div>
